--- a/.github/workflows/build_sage_my1.yml
+++ b/.github/workflows/build_sage_my1.yml
@@ -64,8 +64,8 @@ jobs:
           python-version: '3.13.8'
 
       # https://github.com/Jimver/cuda-toolkit/issues/395
-      # - uses: Jimver/cuda-toolkit@v0.2.22
-      - uses: N-Storm/cuda-toolkit@v0.2.28
+      # - uses: Jimver/cuda-toolkit@v0.2.22    N-Storm/cuda-toolkit@v0.2.28
+      - uses: Jimver/cuda-toolkit@v0.2.29
         with:
           cuda: ${{ inputs.cuda_major }}.${{ inputs.cuda_minor }}.${{ inputs.cuda_patch }}
           use-github-cache: false
